Utilizando <ion-datetime>
Foi inserido um<ion-content> e um <ion-card> para melhor configuração de posicionamento.
Também utilizei o [(ngModel)]="Variável"
passando a variável  do New Date, que pega data e hora da maquina.

--- a/teste01/src/app/tab3/tab3.page.html
+++ b/teste01/src/app/tab3/tab3.page.html
@@ -1,17 +1,24 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
     <ion-title>
-      Lixeira
+     Hora e Data
     </ion-title>
   </ion-toolbar>
 </ion-header>
 
-<ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">Tab 3</ion-title>
-    </ion-toolbar>
-  </ion-header>
-
-  <app-explore-container name="Vazia"></app-explore-container>
+<ion-content>
+  <ion-card color="primary" class="ion-padding">
+    <ion-label>HORA</ion-label>
+    <ion-item>
+      <ion-label></ion-label>
+      <ion-datetime  [(ngModel)]="hora" displayFormat="HH:mm"></ion-datetime>
+    </ion-item>
+  </ion-card>
+  <ion-card color="secondary" class="ion-padding">
+    <ion-label>DATA</ion-label>
+    <ion-item>
+      <ion-label position="end"></ion-label>
+      <ion-datetime [(ngModel)]="data" displayFormat="DD/MM/YYYY" ></ion-datetime>
+    </ion-item>
+  </ion-card>
 </ion-content>
