--- a/teste01/src/app/tabs/tabs.page.html
+++ b/teste01/src/app/tabs/tabs.page.html
@@ -12,8 +12,8 @@
     </ion-tab-button>
 
     <ion-tab-button tab="tab3">
-      <ion-icon name="trash-outline"></ion-icon>
-      <ion-label>Lixeira</ion-label>
+      <ion-icon name="time-outline"></ion-icon>
+      <ion-label>Hora&Data</ion-label>
     </ion-tab-button>
   </ion-tab-bar>
 
