--- a/teste03/src/app/home/home.page.html
+++ b/teste03/src/app/home/home.page.html
@@ -25,7 +25,7 @@
   </ion-header>
 
   <div id="container">
-    <strong>Criação de app com 2 botões</strong>
+    <strong>Criação de app com botões</strong>
     <p><ion-button expand="block" fill="outline" href="https://ionicframework.com/docs" >Ionic framework</ion-button></p>
     <p>ir para o site</p>
   </div>
