--- a/novoLogin/src/app/home/home.page.html
+++ b/novoLogin/src/app/home/home.page.html
@@ -1,50 +1,52 @@
 <ion-content class="background">
   <div class="content">
-   
-      <ion-title style="text-align: center;"><br><br>
-        Login
-      </ion-title>
-    
-      <div class="ion-padding">
-        <ion-input placeholder="E-mail" style="padding-left:10px !important; font-family:'Nunito, sans-serif'"></ion-input><br>
-        <ion-input placeholder="Senha" style="padding-left:10px !important; font-family:'Nunito, sans-serif'"></ion-input>
-      </div>
-      <ion-button expand="block" fill="outline" class="button" style="text-transform:none"><b>ENTRAR</b></ion-button>
-      <ion-col size="1">
-        <ion-label>Lembrar</ion-label>
-        <ion-checkbox [(ngModel)]="pepperoni"></ion-checkbox>
-        
+
+    <ion-title style="text-align: center; margin-top: 25px;">
+      <img class="logo" src="../../assets/pale-deal-1.png">
+    </ion-title>
+
+
+    <div class="ion-padding">
+      <ion-input placeholder="E-mail">
+      </ion-input><br>
+      <ion-input type="password"  placeholder="Senha"></ion-input>
+    </div>
+    <ion-button expand="block" fill="outline" class="button" style="text-transform:none"><b>ENTRAR</b></ion-button>
+    <ion-col size="1">
+
+      <ion-checkbox [(ngModel)]="pepperoni">
+
+      </ion-checkbox>
+      <ion-label> Lembrar</ion-label>
+    </ion-col>
+    <ion-row>
+      <ion-col class="novaLine">
+
       </ion-col>
+      <ion-col size="2" style="text-align: center; color:#0662f6">
+        <b>Ou</b>
+      </ion-col>
+      <ion-col class="novaLine">
+
+      </ion-col>
+    </ion-row>
+    <ion-row class="row-icone">
+      <ion-img class="icone" src="../../assets/icon/icons8-facebook-64.png"></ion-img>
+      <ion-img class="icone" src="../../assets/icon/icons8-logo-de-google-64.png"></ion-img>
+    </ion-row>
+    <ion-grid>
       <ion-row>
-        <ion-col class="novaLine1">
-
-        </ion-col>
-        <ion-col size="2" style="text-align: center; color:#0662f6">
-          <b>Ou</b>
-        </ion-col>
-        <ion-col class="novaLine">
-
+        <ion-col size="1"><br>
+          <ion-button fill="clear"
+            style="font-size:medium; color: #dd0aa8; margin-right: 5px; text-transform: none; font-family: 'Nunito, sans-serif'">
+            Esqueceu a senha?</ion-button>
         </ion-col>
       </ion-row>
 
-      <ion-button expand="block" fill="outline" class="fbbutton" size="default">
-      <b>
-        <ion-icon name="logo-facebook"></ion-icon>
-        ENTRAR COM FACEBOOK
-      </b>
-      </ion-button>
-      
-      <ion-grid>
-        <ion-row>
-          <ion-col size="1"><br>
-            <ion-button fill="clear" style="font-size:medium; color: #dd0aa8; margin-right: 5px; text-transform: none; font-family: 'Nunito, sans-serif'">Esqueceu a senha?</ion-button>
-          </ion-col>
-        </ion-row>
-        
-      </ion-grid>
-      
-      <ion-title style="font-size: small; text-align: center;">Ainda não possui conta?</ion-title>
-      <ion-button expand="block" fill="outline" class="button" style="text-transform:none"><b>CADASTRE-SE</b></ion-button>
-      
-</div>
+    </ion-grid>
+
+    <ion-title style="font-size: small; text-align: center;">Ainda não possui conta?</ion-title>
+    <ion-button (click)="entrar()" expand="block" fill="outline" class="button" style="text-transform:none"><b>CADASTRE-SE</b></ion-button>
+
+  </div>
 </ion-content>
